# ssb-pre-system

./: .cookiecutter.json  .cruft.json  .gitattributes  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pre-system-demo.ipynb  pyproject.toml  sonar-project.properties
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
examples/: example-pre-system.ipynb  example_m_y_numbers.py  example_mb_ab.py  example_mind4_minm4.py  example_pre_system.py
pre_system/: formula.py  overlay.py  pre_system.py
src/: convert.py  pre_system.py
src/pre_system/: __init__.py  __main__.py  addidatative_benchmark.py  additive_benchmark.py  chaining.py  convert.py  example_mb_ab.py  formula.py  mind4.py  minm4.py  multiplicative_benchmark.py  overlay.py  pre_system.py
tests/: __init__.py  conftest.py  test_additive_benchmarking.py  test_chain_df.py  test_convert.py  test_formula.py  test_functions.py  test_main.py  test_mind4.py  test_minm4.py  test_multiplicative_benchmarking.py  test_overlay.py  test_pre_system.py
tests/testdata/: facit_convert_monthly.parquet  facit_convert_step_monthly.parquet  facit_formula_evaluate_vx.parquet  facit_formula_evaluate_x.parquet  facit_fsumprod_evaluate_pxf.parquet  facit_fsumprod_evaluate_pxs.parquet  facit_pre_system_evaluate.parquet  input_annual_df.parquet  input_indicator_df.parquet  input_quarterly_df.parquet  input_weight_df.parquet
