[tool.poetry]
name = "nr-forsystem"
version = "0.1.0"
description = "Forsystem for månedlige og kvartalsevise NR-statistikker"
authors = ["Magnus Kvåle Helliesen <magnus.helliesen@gmail.com>"]
license = "MIT"
packages = [{include = "pre_system"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dapla-toolbelt = "^1.3.2"
matplotlib = "^3.7.1"
cryptography = "41.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
